Fixing collapsed height of the .card element

--- a/css/style.css
+++ b/css/style.css
@@ -224,12 +224,13 @@ body {
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
-  position: relative; }
+  position: relative;
+  height: 50rem; }
   .card__side {
     background-color: orangered;
     font-size: 2rem;
     color: #fff;
-    height: 20rem;
+    height: 50rem;
     transition: all 0.8s;
     position: absolute;
     top: 0;
